--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.5",
     "chart.js": "^4.4.2",
+    "firebase": "^9.15.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.1",
@@ -25,6 +28,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-router-hash-link": "^2.4.3",
