--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,6 @@
-REACT_APP_SERVER_DOMAIN=https://doctorappointment-backend-8dje.onrender.com/api
-# REACT_APP_SERVER_DOMAIN=http://localhost:5015/api
+# REACT_APP_SERVER_DOMAIN=https://doctorappointment-backend-8dje.onrender.com/api
+# REACT_APP_SERVER_DOMAIN=https://doctorappointment-ay1d.onrender.com/api
+REACT_APP_SERVER_DOMAIN=http://localhost:5015/api
 REACT_APP_CLOUDINARY_BASE_URL=https://api.cloudinary.com/v1_1/dnckl9nfl/image/upload
 REACT_APP_CLOUDINARY_CLOUD_NAME= dnckl9nfl
 REACT_APP_CLOUDINARY_PRESET=xpbqqwzl
