--- a/client/.gitignore
+++ b/client/.gitignore
@@ -15,9 +15,10 @@
 .DS_Store
 .env.local
 .env.development.local
+.env
+.env.test
 .env.test.local
 .env.production.local
-/.env
 
 npm-debug.log*
 yarn-debug.log*
