--- a/client/package.json
+++ b/client/package.json
@@ -40,7 +40,7 @@
     "react-twilio-video": "^1.1.16",
     "recharts": "^2.12.3",
     "socket.io-client": "^4.7.5",
-    "twilio-video": "^2.28.1",
+    "twilio-video": "2.32.0",
     "vite-plugin-rewrite-all": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
